# headless-word

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  dockerfile.test  pyproject.toml
.github/workflows/: publish.yml  test.yml
skills/headless-word/: SKILL.md
src/headless_word/: __init__.py  cli.py  client.py  constants.py  errors.py  models.py  postprocess.py  watch.py
src/headless_word/daemon/: __init__.py  api.py  base.py  config.py  linux.py  linux_helper.py  macos.py  macro.py  windows.py
tests/: conftest.py  test_cli_integration.py
