[project]
name = "headless-word"
version = "0.1.0"
description = "Word document automation tool for agents in headless environments"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["word", "docx", "libreoffice", "document", "automation", "headless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = ["pydantic>=2.0.0", "websockets>=16.0"]

[project.optional-dependencies]
watch = ["websockets>=13.0"]

[project.scripts]
headless-word = "headless_word.cli:main"

[project.urls]
Repository = "https://github.com/nickvdyck/headless-word"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ty.environment]
python-version = "3.10"
python-platform = "linux"

# linux_helper.py runs inside LibreOffice's UNO Python runtime with
# runtime-only imports (uno, com.sun.star.*) and loosely-typed minidom APIs.
[[tool.ty.overrides]]
include = ["src/headless_word/daemon/linux_helper.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
no-matching-overload = "ignore"

[[tool.ty.overrides]]
include = ["src/headless_word/daemon/windows.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.9.0", "ty>=0.0.1a7"]
